# nextpty_auto_server_setup

./: README.md  pyproject.toml
.github/workflows/: ci.yml
nextpty_auto_server_setup/: hooks.py  modules.txt
nextpty_auto_server_setup/apis/: login.py  payment.py  site.py  site_domain.py
nextpty_auto_server_setup/nextpty_auto_server_setup/custom/: customer.json  subscription.json
nextpty_auto_server_setup/nextpty_auto_server_setup/doctype/apps/: apps.js  apps.json  apps.py  test_apps.py
nextpty_auto_server_setup/nextpty_auto_server_setup/doctype/apps_to_install_in_site/: apps_to_install_in_site.json  apps_to_install_in_site.py
nextpty_auto_server_setup/nextpty_auto_server_setup/doctype/croem_saved_card_token/: croem_saved_card_token.js  croem_saved_card_token.json  croem_saved_card_token.py  test_croem_saved_card_token.py
nextpty_auto_server_setup/nextpty_auto_server_setup/doctype/croem_settings/: croem_settings.js  croem_settings.json  croem_settings.py  test_croem_settings.py
nextpty_auto_server_setup/nextpty_auto_server_setup/doctype/customer_contacts/: customer_contacts.json  customer_contacts.py
nextpty_auto_server_setup/nextpty_auto_server_setup/doctype/customer_site_details/: customer_site_details.js  customer_site_details.json  (+2 more)
nextpty_auto_server_setup/schedular/: check_new_site_status.py  subscription.py
nextpty_auto_server_setup/webhooks/: __init__.py  site_status_change.py
nextpty_auto_server_setup/www/: change_card.html  dashboard.html  payment.py  paymenthistory.html  re-new-site-subscription.html  signup.html  signup.py  test.html
(+24 files in other folders)
