[project]
name = "nextpty_auto_server_setup"
authors = [
    { name = "NextPTY", email = "erp@nextpty.com"}
]
description = "This app for auto create site in frappe cloud"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "boto3~=1.35.73"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
